<resources>
    <string name="app_name">NekretnineUI</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_account">Account</string>
    <string name="title_sales">For sale</string>
    <string name="title_rentals">For rent</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="password_show">Show password</string>
    <string name="sign_up">"Don't have an account yet? "</string>
    <string name="account_username">Username</string>
    <string name="account_name">Firstname</string>
    <string name="account_surname">Lastname</string>
    <string name="account_password">Password</string>
    <string name="account_email">Email</string>
    <string name="account_phone">e.g. +387 61 xxx xxx</string>
    <string name="help">If you are a new user, here you can find all the necessary information about the application.
        The purpose of the Real Estate application is to facilitate the search for real estate users through
        sophisticated searches. If you own a real estate you can post an ad on our site! Is it necessary to create an
        account? It is not necessary to create a user account to view and search the ads. If you want to place an ad,
        creating an account is mandatory. How do I create an account? You can create a user account by going to the user
        shortcut at the bottom of the screen. How do I set up an ad? To create an ad, you need to create an account.
        After creating your account, sign in with your data, after which you will be able to create your ad by clicking
        the \'Create advert\' button. What options do I have as a registered user? As a registered user, you have the
        ability to post ads and view your ads, and edit your account. How can I contact others? By leaving your personal
        information, other users will be able to contact you by phone number or e-mail. Similarly, by clicking on the ad
        you can contact real estate owners. How do I search real estate? Search for properties by going to a search
        shortcut at the bottom of the screen. Search is possible depending on category (rent / sale), price, city,
        settlement and number of rooms.
    </string>
    <string name="helpText"/>
    <string name="views">View</string>


</resources>
