<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/title_home"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/rentals_card"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="4dp" android:layout_marginEnd="8dp"
            card_view:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/message" android:layout_marginStart="8dp"
            card_view:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:scaleType="fitXY"
                android:src="@drawable/rent"
                android:id="@+id/imageView"/>
        <TextView
                android:id="@+id/rentals_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="190dp"
                android:text="@string/title_rentals" android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>
    </android.support.v7.widget.CardView>

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/sales_card"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            card_view:cardCornerRadius="4dp" android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toTopOf="@+id/navigation" android:layout_marginTop="8dp"
            card_view:layout_constraintTop_toBottomOf="@+id/rentals_card" android:layout_marginEnd="8dp"
            card_view:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            card_view:cardElevation="10dp"
            android:layout_marginStart="8dp" card_view:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" card_view:layout_constraintHorizontal_bias="1.0"
            card_view:layout_constraintVertical_bias="0.0">

        <ImageView
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:layout_height="182dp"
                android:src="@drawable/sale"
                android:id="@+id/imageSales"/>
        <TextView
                android:id="@+id/sales_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageSales"
                android:paddingTop="190dp"
                android:text="@string/title_sales" android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>

    </android.support.v7.widget.CardView>


    <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_alignParentBottom="true"
            app:menu="@menu/navigation"/>

</android.support.constraint.ConstraintLayout>
