<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">
    <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/loadingProgress"
            android:indeterminate="true"
            android:visibility="invisible" android:layout_marginTop="216dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:src="@drawable/logo"
            android:id="@+id/logo" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="2dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_marginTop="232dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/account_username"/>
    <EditText
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editPassword"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/editText"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:hint="Password" app:layout_constraintHorizontal_bias="0.53"/>
    <Button
            android:text="Login"
            android:layout_width="285dp"
            android:layout_height="38dp" android:id="@+id/button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:background="@color/colorPrimary"
            android:textColor="#ffff" app:layout_constraintHorizontal_bias="0.578"/>

    <CheckBox
            android:layout_width="289dp"
            android:layout_height="35dp"
            android:id="@+id/checkBox" android:text="@string/password_show"
            app:layout_constraintTop_toBottomOf="@+id/editPassword"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.556"
            android:layout_marginTop="10dp"/>
    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textColor="@color/colorInfo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="196dp"
            app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>